StringTaskTest: добавил DDT тест testDDTPutWordsReverseInString pom.xml: добавил библиотеку opencsv CollectionsUtilities: Переименование ArrayListNotNullException на ArrayListNullException CollectionsTaskTest: Переименование ArrayListNotNullException на ArrayListNullException CollectionsTask: Добавил данные для javadoc. Убрал комментарии ArrayTask: Добавил дату последнего изменения в класс для Javadoc. Убрал комментарии ArrayListNotNullException: исправил текс в сообщении об ошибке FileUtilities: изменил методы getTextFromTextFile, getSheetFromXlsFile, searchIndexCell. Создал метод isFileExist, getDataWithXls, writeDataInXls FileTaskTest: изменил вызов методов в тестах после их изменения на статические FileTask: Добавил проверку на существование файла в методы readerTextFileAndWriterInfoInFile и parseXlsFile. Отредактировал метод parseXlsFile. Сделал методы readerTextFileAndWriterInfoInFile, parseXlsFile статическими FileUtilitiesTest: Добавил 7 тестов для методов getSheetFromXlsFile, searchIndexCell, isFileExist NumberOfSheetsOutsideLimitException: Создал класс с исключением NumberOfSheetsOutsideLimitException FileNotFoundException: Создал класс с исключением FileNotFoundException Constants: Изменил имя интерфейса с Constant на Constants. Переименовал переменную NOT_FILE_XLS в NON_EXISTENT_FILE_XLS Использовал конструкцию try-with-resources для BufferedReader,BufferedWriter, InputStream, HSSFWorkbook. Изменил тип переменной text с String на StringBuilder в методе getTextFromTextFile.